--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@react-native-firebase/auth": "^23.4.1",
+    "@react-native-firebase/firestore": "^23.4.1",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0"
   }
