--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "dependencies": {
-    "expo": "^54.0.13"
+    "expo": "^54.0.13",
+    "react": "19.1.0",
+    "react-native": "0.81.4"
   },
   "devDependencies": {
     "@types/react": "^19.2.2",
     "@types/react-native": "^0.72.8"
+  },
+  "name": "accessibility",
+  "version": "1.0.0",
+  "scripts": {
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   }
 }
