--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,8 +11,7 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    ".expo/types/**/*.ts",
     ".expo/types",
-    "expo-env.d.ts"
-, "../App.tsx"  ]
+    "../App.tsx"
+  ]
 }
