--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
-    "expo": "^54.0.13"
+    "expo": "^54.0.13",
+    "react-native-dotenv": "^3.4.11"
   },
   "devDependencies": {
     "@types/react": "^19.2.2",
-    "@types/react-native": "^0.72.8"
+    "@types/react-native": "^0.72.8",
+    "typescript": "~5.9.2"
   }
 }
