--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "expo": "~54.0.12",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
