--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,15 +3,8 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types",
-    "../App.tsx"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types", "App.tsx"]
 }
