--- a/frontend/api.env
+++ b/frontend/api.env
@@ -1,7 +1,21 @@
-API_KEY="AIzaSyB5GccRSHdYRBsRCi1QodjLhwi7XcYoIEI"
-AUTH_DOMAIN="senior-connect-5332e.firebaseapp.com",
-PROJECT_ID="senior-connect-5332e",
-STORAGE_BUCKET="senior-connect-5332e.firebasestorage.app",
-MESSAGING_SENDER_ID="579960718737",
-APP_ID="1:579960718737:web:f1383206dc7f7cafa64630",
-MEASUREMENT_ID="G-F0TCL9JGFG"
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyB5GccRSHdYRBsRCi1QodjLhwi7XcYoIEI",
+  authDomain: "senior-connect-5332e.firebaseapp.com",
+  projectId: "senior-connect-5332e",
+  storageBucket: "senior-connect-5332e.firebasestorage.app",
+  messagingSenderId: "579960718737",
+  appId: "1:579960718737:web:f1383206dc7f7cafa64630",
+  measurementId: "G-F0TCL9JGFG"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
