Revert "Merge origin/VolunteerVerification into main, prefer branch changes"
This reverts commit 134c6c95fc06fdbc925229f17a5556614d48bc94, reversing
changes made to d32be521ba1bf8f9c882490da9558b69c5c11c47.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,4 @@
 {
   "compilerOptions": {},
-  "extends": "expo/tsconfig.base",
-  "exclude": ["frontend/**", "node_modules"]
-
+  "extends": "expo/tsconfig.base"
 }
