--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,14 +1,10 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "jsx": "react-jsx",
     "strict": true,
-    "skipLibCheck": true,
-    "moduleResolution": "bundler",
-    "baseUrl": ".",
-    "paths": { "~/*": ["./*"] },
-    "typeRoots": ["./node_modules/@types"]
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
-  "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types", "App.tsx"]
 }
