--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,13 +25,14 @@
     "dotenv": "^16.4.5",
     "expo": "~51.0.14",
     "expo-av": "~14.0.5",
+    "expo-camera": "^17.0.9",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-haptics": "~13.0.1",
     "expo-image": "~1.12.12",
     "expo-linking": "~6.3.1",
-    "expo-speech-recognition": "^3.0.0",
     "expo-router": "~3.5.16",
+    "expo-speech-recognition": "^3.0.0",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
