--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "dotenv": "^16.4.5",
     "expo": "~51.0.14",
     "expo-av": "~14.0.5",
-    "expo-camera": "^17.0.9",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-haptics": "~13.0.1",
