--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "expo-font": "~12.0.7",
     "expo-haptics": "~13.0.1",
     "expo-image": "~1.12.12",
+    "expo-image-picker": "~15.1.0",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
     "expo-speech-recognition": "^3.0.0",
